# attck-pulse

./: .env.example  .gitignore  LICENSE  METHODOLOGY.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: sources.yaml
notebooks/: 01_attck_pulse_overview.py  README.md
scripts/: capture_advisory_fixture.py  capture_fixture.py  init_db.py  load_attack.py  run_ingester.py  validate_extraction.py
sql/: analysis_queries.sql
sql/migrations/: 001_initial_schema.sql  002_pipeline_runs.sql  003_advisory_support.sql  004_dfir_support.sql
src/threat_intel/: config.py  db.py  logging_setup.py
src/threat_intel/attack/: loader.py
src/threat_intel/extractors/: regex_extractor.py
src/threat_intel/ingesters/: base.py  cisa_advisories.py  cisa_kev.py  dfir_report.py
tests/: test_cisa_advisories.py  test_cisa_kev.py  test_dfir_report.py  test_regex_extractor.py
tests/fixtures/: cisa_aa23-278a.html  cisa_aa23-320a.html  cisa_aa23-352a.html  cisa_aa23-352a_synthetic.html  cisa_aa24-038a.html  cisa_aa25-266a.html  cisa_advisories_feed_synthetic.xml  cisa_inline_only_synthetic.html  dfir_apache-activemq-exploit-leads-to-lockbit-ransomware.html  dfir_cats-got-your-files-lynx-ransomware.html  dfir_feed_synthetic.xml  dfir_flash_alert_synthetic.html  dfir_from-a-single-click-how-lunar-spider-enabled-a-near-two-month-intrusion.html  dfir_lynx_synthetic.html  dfir_no_attack_section_synthetic.html
